--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
@@ -14,6 +15,9 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.34",
+        "symfony/stopwatch": "5.2.*",
+        "symfony/web-profiler-bundle": "5.2.*"
     },
     "config": {
         "optimize-autoloader": true,
